<resources>
    <string name="app_name">NoteApp</string>
    <string name="add_new_folder">Add new folder</string>
    <string name="track_message">Tracked note will notify as a notification on given date and time </string>
    <string name="note">Note</string>
    <string name="date">Reminder Date</string>
    <string name="pick_date_icon">Pick Date Icon</string>
    <string name="time">Reminder Time</string>
    <string name="location">Location</string>
    <string name="add_note_title_placeholder">Click to change title</string>
    <string name="add_note_content_placeholder">Note description</string>
    <string name="pick_time_icon">Pick Time Icon</string>
    <string name="pick_location_icon">Pick Location Icon</string>
    <string name="track">Track</string>
    <string name="add_note">Save Note</string>
    <string name="add_new_folder_icon">Add new Folder Icon</string>
    <string name="small_design_image">Small Design Image</string>
    <string name="add_new_note">add new note</string>
    <string name="view_note_title_created">Created</string>
    <string name="view_note_title_last_modified">Last Modified</string>
    <string name="view_not_title_location">Location</string>
    <string name="view_note_title_tracked">Tracked</string>
    <string name="lorem_ipsum">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel venenatis leo. Praesent posuere dui ac massa convallis scelerisque. Aenean placerat ipsum ante, vitae posuere est vehicula sit amet. Praesent rutrum, nisi et euismod fermentum, eros mauris scelerisque ante, quis iaculis nisi augue vel nisl. Phasellus porta lacinia augue dictum egestas. Nullam feugiat, justo at facilisis pulvinar, tellus nisl pellentesque arcu, et blandit quam ipsum eget orci. Sed ac sodales massa, vel venenatis diam. Sed facilisis justo nunc, a imperdiet urna elementum id. Nam rutrum tellus eget viverra accumsan. Praesent commodo pharetra mauris, eget lacinia tellus bibendum condimentum. Aenean dapibus sem nec elit finibus volutpat et et eros. Suspendisse potenti. Vestibulum tincidunt aliquam elit lacinia congue. Curabitur vestibulum ipsum a massa suscipit, in pellentesque dui dictum.</string>
    <string name="edit_button_to_edit_current_note">edit current note</string>
    <string name="remind_on">Remind on</string>
    <string name="waiting_for_internet_connection">Waiting for Internet Connection</string>
</resources>