<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

        <TextView
                android:text="@string/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                style="@style/TextViewAppBodyEdit"
                android:layout_marginTop="24dp" />

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_edit_note_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_note_title_placeholder"
                            style="@style/TextViewNoteTitle"
                            android:textColorHint="@color/black"
                            android:textSize="14sp"

                            android:backgroundTint="@color/add_note_bg" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_edit_note_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minLines="6"
                            android:hint="@string/add_note_content_placeholder"
                            style="@style/TextViewNoteBody"
                            android:textColorHint="@color/black"
                            android:backgroundTint="@color/add_note_bg" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewAppBodyEdit" />

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/add_note_bg"
                app:cardCornerRadius="10dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/textView_edit_note_date"
                        tools:text="05 August 2021"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/TextViewNoteDateEdit"
                        android:layout_marginEnd="20dp" />

                <ImageButton
                        android:id="@+id/button_edit_note_pick_date"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_baseline_date_range_24"
                        app:tint="@color/black"
                        android:background="#ccc"
                        android:contentDescription="@string/pick_date_icon" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewAppBodyEdit" />

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/add_note_bg"
                app:cardCornerRadius="10dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/textView_edit_note_time"
                        tools:text="05:45 AM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/TextViewNoteDateEdit"
                        android:layout_marginEnd="20dp" />

                <ImageButton
                        android:id="@+id/button_edit_note_pick_time"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_baseline_access_time_24"
                        app:tint="@color/black"
                        android:background="#ccc"
                        android:contentDescription="@string/pick_time_icon" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:text="@string/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewAppBodyEdit" />

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/add_note_bg"
                app:cardCornerRadius="10dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/textView_edit_note_location"
                        tools:text="Malad,Mumbai,Maharashtra,India"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        style="@style/TextViewNoteDateEdit"
                        android:layout_marginEnd="20dp"
                        android:singleLine="true" />

                <ImageButton
                        android:id="@+id/button_edit_note_pick_location"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_baseline_access_time_24"
                        app:tint="@color/black"
                        android:background="#ccc"
                        android:contentDescription="@string/pick_location_icon" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
                android:text="@string/track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                style="@style/TextViewAppBodyEdit" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <!--<TextView
                    android:text="@string/track_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="#99000000" />-->
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_message"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="#99000000"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" />


        </LinearLayout>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppButton"
                android:backgroundTint="@color/black"
                android:text="@string/add_note"
                android:layout_marginTop="24dp"
                app:icon="@drawable/ic_baseline_check_24"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>