<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayout">

        <TextView
                android:id="@+id/textview_view_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="hello world"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                style="@style/TextViewNoteTitle" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:weightSum="10">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewNoteBody"
                    android:text="@string/view_note_title_created"
                    android:textSize="14sp"
                    android:textColor="#CC000000"
                    android:layout_weight="3"
                    android:fontFamily="@font/open_sans" />

            <TextView
                    android:id="@+id/textview_view_note_created"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="11:00 PM    14 May 2021"
                    android:textColor="#000000"
                    android:layout_weight="7"
                    android:fontFamily="@font/open_sans" />


        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:weightSum="10">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewNoteBody"
                    android:text="@string/view_note_title_last_modified"
                    android:textColor="#CC000000"
                    android:layout_weight="3"
                    android:fontFamily="@font/open_sans" />

            <TextView
                    android:id="@+id/textview_view_note_modified"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="11:00 PM    18 May 2021"
                    android:textColor="#000000"
                    android:layout_weight="7"
                    android:fontFamily="@font/open_sans" />


        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="start"
                android:layout_weight="10">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewNoteBody"
                    android:text="@string/view_not_title_location"
                    android:textColor="#CC000000"
                    android:layout_weight="3"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/open_sans" />

            <TextView
                    android:id="@+id/textview_view_note_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/lorem/random"
                    android:textColor="#000000"
                    android:layout_weight="7"
                    android:maxLines="3"
                    android:fontFamily="@font/open_sans" />


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:weightSum="10">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewNoteBody"
                    android:text="@string/view_note_title_tracked"
                    android:textColor="#CC000000"
                    android:layout_weight="3"
                    android:textSize="14sp"
                    android:fontFamily="@font/open_sans" />

            <TextView
                    android:id="@+id/textview_view_note_track"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="True"
                    android:textColor="#000000"
                    android:layout_weight="6"
                    android:fontFamily="@font/open_sans" />


        </LinearLayout>


    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#808080"
            android:id="@+id/view"
            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:id="@+id/nestedScrollView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0">

        <TextView
                android:id="@+id/textview_view_note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewNoteBody"
                android:textSize="12sp"
                android:text="@string/lorem_ipsum"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="22dp" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/edit_button_to_edit_current_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/floatingActionButton"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:tint="#FFFFFF"
            app:backgroundTint="#43A047" />


</androidx.constraintlayout.widget.ConstraintLayout>